Make sure it actually works.

--- a/settings.env
+++ b/settings.env
@@ -7,9 +7,8 @@ LYRIC_REDIRECT_UI=
 LYRIC_TOKEN=
 
 # Influx settings
-INFLUX_HOST=
+INFLUX_URL=
 INFLUX_DB=
-#INFLUX_PORT=
 #INFLUX_USERNAME=
 #INFLUX_PASSWORD=
 
